...
    <string-array name="rcFontSize">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string name="enter_message_here">Enter Message here...</string>
    <string name="send">SEND</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="public_profile">Public Profile</string>
    <string name="messenger">Messenger</string>
    <string name="time_stamp">Time Stamp</string>
    <string name="noResultsFound">No results found!</string>
...
