...
            android:layout_height="40sp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addCommentEditText"
                android:layout_width="351dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/boarder"
                android:hint="Enter comment here..."
                android:padding="5sp" />
...
