...
    <item
        android:id="@+id/viewCommentProfile"
        android:title="View author profile"
        />
    <item
        android:id="@+id/reportComment"
        android:title="Report comment"
        />
    <item
        android:id="@+id/deleteComment"
        android:title="Delete"
        android:visibility="invisible"
        />



</menu>
...
